# infer_demo

./: CMakeLists.txt  Makefile  README.md  TSQueue.hpp  config.json  corex_infer.cpp  corex_infer.h  demo.cpp  dummy_engine.cpp  dummy_engine.h  tdnn_engine.cpp  tdnn_engine.h  util_infer.cpp  util_infer.h
include/: data_utils.h  ixrt.h  ixrt_common.h
